# Tangram3D

./: CMakeLists.txt
includes/GLAD/include/glad/: glad.h
includes/GLAD/src/: glad.c
includes/assimp/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  revision.h
includes/assimp/code/: Makefile  cmake_install.cmake
includes/assimp/test/: Makefile  cmake_install.cmake
includes/assimp/test/headercheck/: Makefile  cmake_install.cmake
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/game/: Components.h  Figure.cpp  Figure.h  Light.cpp  Light.h  MousePicker.cpp  MousePicker.h  Tangram.h
src/glsl/: figure.frag  figure.vert  figureSpecular.frag  light.frag  light.vert
src/shader/: Shader.cpp  Shader.h
